-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.17.0
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/a5193b60-6129-428d-8180-30c60413fcd7
test_103b failed with the following error:
trevis-26vm7 crashed during sanity test_103b
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/117406 - 4.18.0-553.76.1.el8_10.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/117406 - 4.18.0-553.76.1.el8_lustre.x86_64
<<Please provide additional information about the failure here>>
Lustre: DEBUG MARKER: == sanity test 103b: umask lfs setstripe ================= 01:34:37 (1760405677) general protection fault, probably for non-canonical address 0xe258c8855368a57c: 0000 [#1] SMP PTI CPU: 0 PID: 29945 Comm: mdt00_005 Kdump: loaded Tainted: G OE -------- - - 4.18.0-553.76.1.el8_lustre.x86_64 #1 Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 RIP: 0010:__kmalloc+0xac/0x250 Code: 50 49 8b 50 08 49 8b 00 49 83 78 10 00 48 89 04 24 0f 84 7a 01 00 00 48 85 c0 0f 84 71 01 00 00 8b 4d 20 48 8b 7d 00 48 01 c1 <48> 8b 19 48 89 ce 48 33 9d 90 01 00 00 48 8d 4a 01 48 0f ce 48 31 RSP: 0018:ffffaf254c183670 EFLAGS: 00010282 RAX: e258c8855368a57c RBX: ffff9a1a73dd6dd0 RCX: e258c8855368a57c RDX: 0000000000004830 RSI: 0000000000608040 RDI: 0000000000038040 RBP: ffff9a1a41002380 R08: ffff9a1affc38040 R09: 00000000000000c8 R10: 0000000000000001 R11: 0000000000000002 R12: 0000000000608040 R13: 0000000000000008 R14: ffff9a1a41002380 R15: ffffffffc15b560d FS: 0000000000000000(0000) GS:ffff9a1affc00000(0000) knlGS:0000000000000000 CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033 CR2: 000055ab906abc30 CR3: 0000000045e10002 CR4: 00000000000606f0 Call Trace: ? __die_body+0x1a/0x60 ? die_addr+0x38/0x51 ? do_general_protection+0x135/0x280 ? general_protection+0x1e/0x30 ? lod_qos_prep_create+0x1dd/0x18a0 [lod] ? __kmalloc+0xac/0x250 lod_qos_prep_create+0x1dd/0x18a0 [lod] ? lod_qos_parse_config+0x6b1/0xc50 [lod] lod_prepare_create+0x23e/0x330 [lod] lod_declare_striped_create+0x1d2/0x960 [lod] lod_declare_xattr_set+0x509/0x1190 [lod] mdd_create_data+0x420/0x740 [mdd] mdt_mfd_open+0xf8c/0x1110 [mdt] mdt_finish_open+0x708/0x9f0 [mdt] mdt_open_by_fid_lock+0x7ca/0xc80 [mdt] mdt_reint_open+0x880/0x2a90 [mdt] ? lustre_msg_add_version+0x21/0xa0 [ptlrpc] ? lustre_pack_reply_v2+0x1eb/0x280 [ptlrpc] ? ucred_set_audit_enabled.isra.19+0x20/0x50 [mdt] mdt_reint_rec+0x123/0x270 [mdt] mdt_reint_internal+0x4d2/0x980 [mdt] mdt_intent_open+0x13b/0x420 [mdt] ? mdt_intent_fixup_resent+0x220/0x220 [mdt] mdt_intent_opc.constprop.83+0x125/0xc50 [mdt] ? lprocfs_counter_add+0x117/0x180 [obdclass] mdt_intent_policy+0xfb/0x470 [mdt] ldlm_lock_enqueue+0x3e7/0x8f0 [ptlrpc] ? cfs_hash_bd_add_locked+0x1f/0x90 [obdclass] ? cfs_hash_multi_bd_lock+0xa0/0xa0 [obdclass] ldlm_handle_enqueue+0x4e4/0x1660 [ptlrpc] tgt_enqueue+0xa8/0x230 [ptlrpc] tgt_request_handle+0x401/0x1d20 [ptlrpc] ptlrpc_server_handle_request+0x2ca/0xd70 [ptlrpc] ? lprocfs_counter_add+0x117/0x180 [obdclass] ptlrpc_main+0xbc2/0x1490 [ptlrpc] ? __schedule+0x2d9/0x870 ? ptlrpc_wait_event+0x5b0/0x5b0 [ptlrpc] kthread+0x134/0x150 ? set_kthread_struct+0x50/0x50 ret_from_fork+0x35/0x40 Modules linked in: osp(OE) mdd(OE) lod(OE) mdt(OE) lfsck(OE) mgs(OE) mgc(OE) osd_ldiskfs(OE) lquota(OE) lustre(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ksocklnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) ldiskfs(OE) libcfs(OE) dm_flakey dm_mod rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache intel_rapl_msr intel_rapl_common crct10dif_pclmul crc32_pclmul ghash_clmulni_intel pcspkr joydev virtio_balloon i2c_piix4 sunrpc ext4 mbcache jbd2 ata_generic crc32c_intel ata_piix libata virtio_net net_failover serio_raw virtio_blk failover
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_103b - trevis-26vm7 crashed during sanity test_103b
- is related to
-
LU-17037 Tests should run with high and sparse index numbers for OSTs and MDTs
-
- In Progress
-